[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/BluePlayer/BluePlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Blue/SurpriseBlue.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Blue/Blue Neighbor Together.png" type="Texture" id=3]
[ext_resource path="res://assets/audio/bell 2.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/hello.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/art/Mouth Open.png" type="Texture" id=6]
[ext_resource path="res://assets/art/Blue/Blue Door.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Blue/Doorbell Blue.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Blue/Hand Blue.png" type="Texture" id=9]
[ext_resource path="res://assets/audio/winner.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/theme/motionBlur.tres" type="Material" id=11]

[sub_resource type="Animation" id=1]
resource_name = "doorClose"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Opened:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Surprise:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MouthOpen:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "doorOpen"
tracks/0/type = "value"
tracks/0/path = NodePath("Opened:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MouthOpen:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Surprise:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.4, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Surprise:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 0.000270891, 0.000145167, 0.00142977, 0.000766196 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1.3, 1 ), Vector2( -1, 1 ), Vector2( -1.3, 1 ) ]
}
tracks/5/type = "audio"
tracks/5/path = NodePath("BellSound")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = false
tracks/5/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "playNeigbhbor"
}, {
"args": [  ],
"method": "playWinner"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 31, 79 ), Vector2( 160, 79 ), Vector2( 31, 79 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("BellSound")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "playBell"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.01, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "set_motion_blur"
}, {
"args": [  ],
"method": "remove_motion_blur"
} ]
}

[node name="Blue Neighbor" type="Node2D"]
script = ExtResource( 1 )

[node name="Closed" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="Opened" type="Sprite" parent="."]
visible = false
position = Vector2( 28, 0 )
texture = ExtResource( 3 )

[node name="Doorbell" type="Sprite" parent="."]
position = Vector2( 284, 55 )
texture = ExtResource( 8 )

[node name="Hand" type="Sprite" parent="."]
material = ExtResource( 11 )
position = Vector2( 31, 79 )
texture = ExtResource( 9 )

[node name="Surprise" type="Sprite" parent="."]
visible = false
rotation = -3.14159
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="MouthOpen" type="Sprite" parent="."]
visible = false
position = Vector2( 11, 108 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/doorClose = SubResource( 1 )
anims/doorOpen = SubResource( 2 )
anims/pressBellBlue = SubResource( 3 )

[node name="BellSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="NeighborSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="WinnerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
